Fixed alignment issue on landing page

--- a/FrontEnd/agme-app/src/components/LandingPage.css
+++ b/FrontEnd/agme-app/src/components/LandingPage.css
@@ -15,10 +15,10 @@
   width: 171px;
   height: 75px;
   left: 163px;
-  top: 216px;
+  top: 126px;
 
   font-style: normal;
-  font-size: 64px;
+  font-size: 56px;
   line-height: 75px;
   font-weight: 600;
   font-family: 'Montserrat', sans-serif;
@@ -31,11 +31,11 @@
   width: 700px;
   height: 190px;
   left: 163px;
-  top: 306px;
+  top: 216px;
 
   
   font-style: normal;
-  font-size: 32px;
+  font-size: 24px;
   line-height: 37px;
   font-weight: 400;
   font-family: 'Raleway', sans-serif;
@@ -46,13 +46,13 @@
 
 .contact-title {
   position: absolute;
-  width: 408px;
+  width: 400px;
   height: 75px;
   left: 163px;
-  top: 632px;
+  top: 452px;
 
   font-style: normal;
-  font-size: 64px;
+  font-size: 56px;
   line-height: 75px;
   font-weight: 600;
   font-family: 'Montserrat', sans-serif;
@@ -65,10 +65,10 @@
   width: 700px;
   height: 190px;
   left: 163px;
-  top: 722px;
+  top: 542px;
 
   font-style: normal;
-  font-size: 32px;
+  font-size: 24px;
   line-height: 37px;
   font-weight: 400;
   font-family: 'Raleway', sans-serif;
